Fixed nav responsiveness on small screens

--- a/components/Navigation/index.css
+++ b/components/Navigation/index.css
@@ -91,3 +91,8 @@ nav {
     margin: 0;
   }
 }
+@media only screen and (max-width: 330px) {
+  .navigation .nav--item {
+    font-size: 16px;
+  }
+}
